--- a/frontend/src/components/Screen.css
+++ b/frontend/src/components/Screen.css
@@ -13,6 +13,7 @@
   /* font-family: "Ubuntu", sans-serif; */
   font-family: "Work Sans", sans-serif;
   padding: 5px 10px;
+  margin-top: 5%;
 }
 
 @media only screen and (min-width: 1200px) {
