--- a/frontend/src/screens/ProfileScreen/ProfileScreen.css
+++ b/frontend/src/screens/ProfileScreen/ProfileScreen.css
@@ -1,13 +1,18 @@
 .profilePic {
-  width: 60%;
+  width: 100%;
   display: flex;
   align-items: center;
   padding: 20px;
+  border-radius: 50%;
 }
+
 .profileContainer {
   display: flex;
   margin: 20px;
+  align-items: center;
+  justify-content: center;
 }
+
 @media only screen and (max-width: 768px) {
   .profileContainer {
     flex-direction: column-reverse;
